# SpecScan

./: README.md  index.html  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: cpus.csv  gpus.csv
src-tauri/src/: lib.rs
src-tauri/src/hardware/: cpu.rs  disks.rs  gpu.rs  memory.rs  mod.rs  motherboard.rs  network.rs  system.rs
src/components/hardware/: CpuView.vue  DisksView.vue  GpuView.vue  MemoryView.vue  MotherboardView.vue  NetworkView.vue  SystemView.vue
src/components/icons/: IconCpu.vue  IconDisk.vue  IconGpu.vue  IconMemory.vue  IconMotherboard.vue  IconNetwork.vue  IconSummary.vue  IconSystem.vue  index.ts
src/components/layout/: AppSidebar.vue
src/composables/: useHardwareData.ts  useUpdater.ts
src/composables/__tests__/: useHardwareData.spec.ts  useUpdater.spec.ts
src/types/: hardware.ts
