[package]
name = "SpecScan"
version = "0.2.0"
description = "Know your machine. SpecScan fetches detailed hardware info through a clean, shareable interface."
authors = ["Ilan Fonseca <ilan-_@hotmail.com>"]
license = ""
repository = "https://github.com/ilanzgx/specscan"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
window-vibrancy = "0.7.1"
sysinfo = "0.36.1"
smbios-lib = "0.9.2"
raw-cpuid = "11.6.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
csv = "1.4.0"
